--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
@@ -189,17 +189,17 @@
   height: 18rpx;
 }
 
-.title-wrap {
+.content-title-wrap {
   margin-top: 48rpx;
 }
-.title {
+.content-title {
   position: relative;
   padding-left: 12rpx;
   color: #333;
   font-size: 30rpx;
   font-weight: bold;
 }
-.title::before {
+.content-title::before {
   position: absolute;
   top: 50%;
   left: 0;
@@ -417,4 +417,8 @@
   flex-wrap: nowrap;
   margin-top: 24rpx;
   height: 280rpx;
+}
+
+.media-wrap {
+  margin-top: 24rpx;
 }
