--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
@@ -430,7 +430,7 @@
 }
 
 .no-more-tips {
-  padding: 16rpx 0 24rpx;
+  margin-top: 24rpx;
   color: #999;
   font-size: 24rpx;
   text-align: center;
