--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -14,11 +14,19 @@
   </view>
 
   <view class="menu-wrap row" wx:if="{{navBarVisible}}">
-    <scroll-view class="menu" scroll-x enable-flex>
+    <scroll-view 
+      class="menu" 
+      scroll-left="{{curMenuIdx > 2 ? (curMenuIdx - 1) * 80 : 0}}" 
+      scroll-with-animation 
+      scroll-x 
+      enable-flex
+    >
       <view 
         class="menu-item row {{curMenuIdx === index ? 'active' : ''}}" 
-        wx:for="{{['景点门票', '多景点联票', '点评', '问答', '附近酒店', '附近景点', '达人打卡']}}"
+        wx:for="{{['景点门票', '多景点联票', '用户点评', '热门问答', '附近酒店', '附近景点', '达人打卡']}}"
         wx:key="index"
+        bindtap="selectMenu"
+        data-index="{{index}}"
       >{{item}}</view>
     </scroll-view>
     <button class="share-btn">
@@ -223,7 +231,7 @@
   </view>
 
   <view class="content-title-wrap">
-    <view class="content-title">点评</view>
+    <view class="content-title">用户点评</view>
   </view>
   <view class="comment-list">
     <comment-item wx:for="{{commentList}}" wx:key="index" item="{{item}}" />
@@ -234,7 +242,7 @@
   </view>
 
   <view class="content-title-wrap">
-    <view class="content-title">问答</view>
+    <view class="content-title">热门问答</view>
   </view>
   <view class="qa-list">
     <view class="qa-item">
