--- a/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxss
@@ -53,6 +53,7 @@
   width: 200rpx;
   height: 300rpx;
   vertical-align: top;
+  font-size: 0;
   border: 1px solid #eee;
   border-radius: 16rpx;
   overflow: hidden;
