--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/subpages/more-info/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/subpages/more-info/index.wxml
@@ -38,5 +38,42 @@
         <view class="grid-item">08:30 - 16:30 (16:30停止入园)</view>
       </view>
     </view>
+    <view class="warning-tips">以上信息仅供参考，具体以景点当日实际公告信息为准</view>
+  </view>
+
+  <view class="card">
+    <view class="card-title">优待政策</view>
+    <view class="grid">
+      <view class="grid-line title">
+        <view class="grid-item">适用人群</view>
+        <view class="grid-item main">适用条件</view>
+        <view class="grid-item">优待政策</view>
+      </view>
+      <view class="grid-line">
+        <view class="grid-item">婴幼儿</view>
+        <view class="grid-item main content">身高：1.2米（不含）以下</view>
+        <view class="grid-item">免费</view>
+      </view>
+      <view class="grid-line">
+        <view class="grid-item">老人</view>
+        <view class="grid-item content main">年龄：70周岁（含）以上</view>
+        <view class="grid-item">免费</view>
+      </view>
+    </view>
+    <view class="warning-tips">以上信息仅供参考，具体以景点当日实际公告信息为准</view>
+  </view>
+
+  <view class="card">
+    <view class="card-title">咨询热线</view>
+    <view class="tel-list">
+      <veiw class="tel row between">
+        <view>0571-64877126</view>
+        <image class="tel-icon" src="./images/tel.png" />
+      </veiw>
+      <veiw class="tel row between">
+        <view>0571-64832828</view>
+        <image class="tel-icon" src="./images/tel.png" />
+      </veiw>
+    </view>
   </view>
 </view>
