--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/subpages/more-info/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/subpages/more-info/index.wxss
@@ -129,3 +129,28 @@
   width: 48rpx;
   height: 48rpx;
 }
+
+.project-list {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-top: 24rpx;
+  height: 280rpx;
+}
+.project-item {
+  margin-right: 12rpx;
+  width: 220rpx;
+  font-size: 0;
+  border-radius: 12rpx;
+  box-shadow: 0 0 12rpx 6rpx #f5f6f7;
+}
+.project-image {
+  border-radius: 12rpx 12rpx 0 0;
+  width: 100%;
+  height: 140rpx;
+}
+.project-name {
+  padding: 10rpx;
+  color: #333;
+  font-size: 24rpx;
+  font-weight: bold;
+}
