--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/subpages/more-info/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/subpages/more-info/index.wxss
@@ -5,17 +5,17 @@
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
-  height: 88rpx;
+  height: 44px;
   background: #fff;
   border-top: 1px solid #f5f6f7;
   box-shadow: 0 1px 1px 0 rgba(0,0,0,0.05);
   z-index: 100;
 }
 .menu-item {
-  padding: 0 24rpx;
-  height: 88rpx;
+  padding: 0 12px;
+  height: 44px;
   color: #999;
-  font-size: 28rpx;
+  font-size: 14px;
   white-space: nowrap;
 }
 .menu-item.active {
@@ -26,17 +26,17 @@
 .menu-item.active::after {
   position: absolute;
   left: 50%;
-  bottom: 12rpx;
+  bottom: 6px;
   transform: translateX(-50%);
-  width: 50rpx;
-  height: 6rpx;
+  width: 25px;
+  height: 3px;
   content: "";
-  border-radius: 3rpx;
+  border-radius: 2px;
   background: #77a9fd;
 }
 
 .container {
-  margin-top: 88rpx;
+  margin-top: 44px;
   padding: 24rpx;
   padding-bottom: calc(24rpx + env(safe-area-inset-bottom));
 }
