--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/subpages/more-info/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/subpages/more-info/index.wxml
@@ -116,7 +116,7 @@
       </view>
       <view class="tips-item">
         <view class="tips-title">游玩时长</view>
-        <view class="tips-content">景区不大，建议1-3小时，一般不建议在景区内用餐，自带少许水和食物即可</view>
+        <view class="tips-content">建议1-3小时，景区不大，一般不建议在景区内用餐，自带少许水和食物即可</view>
       </view>
     </view>
   </view>
