--- a/pages/subpages/mall/scenic-spot/subpages/order-check/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/order-check/index.wxml
@@ -1,6 +1,27 @@
 <view class="container">
   <view class="ticket">
-    <view class="ticket-name row">千岛湖森林氧吧 成人票</view>
+    <view class="ticket-info">
+      <view class="ticket-name row">千岛湖森林氧吧 成人票</view>
+      <view class="ticket-tips">
+        <view class="tips-wrap row">
+          <image class="tips-icon" src="./images/limit.png" />
+          <view class="tips">指定入园日期3天内有效</view>
+        </view>
+        <view class="tips-wrap row">
+          <image class="tips-icon" src="./images/time.png" />
+          <view class="tips">出票3小时后可用</view>
+        </view>
+        <view class="tips-wrap row">
+          <image class="tips-icon" src="./images/tips.png" />
+          <view class="tips stress">随时可退</view>
+          <view class="tips">无需换票</view>
+          <view class="tips stress row">
+            <text>预定须知</text>
+            <image class="right-arrow" src="./images/more-blue.png" />
+          </view>
+        </view>
+      </view>
+    </view>
     <view class="split-line" />
     <view class="date-picker">
       <view class="date-picker-title">选择日期</view>
@@ -22,6 +43,14 @@
           </view>
           <image class="more-icon" src="./images/arrow-right.png" />
         </view>
+      </view>
+    </view>
+
+    <view class="count-control row between">
+      <view class="count-control-title">购买数量</view>
+      <view class="step-wrap row">
+        <price-unit style="margin-right: 24rpx;" price="{{40}}" />
+        <van-stepper integer />
       </view>
     </view>
   </view>
